# template-mkdocs-material

./: .gitignore  .gitlab-ci.yml  .lycheeignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: .kodiak.toml  dependabot.yml
.github/workflows/: gh-pages.yml  linkcheck.yml  lychee.yml  pages.yml
about/: index.html
blog/: index.html
blog/2023/01/31/hello-world/: index.html
blog/archive/2023/: index.html
blog/category/hello/: index.html
blog/category/world/: index.html
docs/: index.md
docs/_javascripts/: config.js
docs/_stylesheets/: extra.css
docs/blog/posts/: hello-world.md
markdown/advanced/: index.html
markdown/basic/: index.html
search/: search_index.json
