[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Wen-Wei Tseng", email = "sosiristseng@gmail.com"},
]
dependencies = ["mkdocs-material"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []
